--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
+  "name": "proyecto-programacion-web",
+  "version": "1.0.0",
+  "description": "Proyecto del curso de programacion web",
+  "main": "./src/server.js",
+  "scripts": {
+    "dev": "nodemon -e js ./src/server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.9",
+    "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.6"
   }
